@@ -6,30 +6,33 @@
   </head>
   <body>
     <div id="header">
-      <a id="edit" href="<%= editThingPath %>">Edit this thing</a>
-      <h2><a href="<%= index %>">Mushin</a></h2>
+      <a id="edit" href="{{editThingPath}}">Edit this thing</a>
+      <h2><a href="{{index}}">Mushin</a></h2>
     </div>
     <div id="content">
-      <h1>Mushin</h1>
+      <h1>{{title}}</h1>
       <div id="thing">
-        <div class="body"><%= thing.description %></div>
+        <div class="body">{{title}}</div>
         <div class="start">
-          started <span class="date"><%= thing.start %></span>
+          started <span class="date">{{start}}</span>
         </div>
         <div class="due">
-          due <span class="date"><%= thing.due %></span>
+
+          due <span class="date">{{start}}</span>
         </div>
       </div>
-      <div id="projects">projects: <%= thing.projects %></div>
-      <div id="contexts">contexts: <%= thing.contexts %></div>
+{{#thing}}
+      <div id="contexts">contexts: {{contexts}}</div>
+      <div id="projects">projects: {{projects}}</div>
+{{/thing}}
     </div>    
   </body>
   <script src="/_utils/script/json2.js"></script>
   <script src="/_utils/script/jquery.js?1.2.6"></script>
   <script src="/_utils/script/jquery.couch.js?0.8.0"></script>
-  <script src="<%= assets %>/vendor/couchapp/date.js"></script>
-  <script src="<%= assets %>/jquery.mushin.js"></script>
-  <script src="<%= assets %>/thing.js"></script>
+  <script src="{{assets}}/vendor/couchapp/date.js"></script>
+  <script src="{{assets}}/jquery.mushin.js"></script>
+  <script src="{{assets}}/thing.js"></script>
   <script type="text/javascript" charset="utf-8">
   $.MushinApp(function(app) {
       var docid = document.location.pathname.split('/').pop();
